--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script
+      async
+      defer
+      data-website-id="569a36fc-18d4-4ee4-a40c-7c7a9a35b3a1"
+      src="https://analitica.enflujo.com/umami.js"
+    ></script>
     <title>Emporio no Benevolente</title>
   </head>
   <body>
