Visualizaciòn de las categorias detectadas

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
         <canvas id="lienzo"></canvas>
         <video id="video" autoplay controls></video>
       </div>
+
+      <div id="listaCategorias"></div>
     </main>
   </body>
 </html>
