--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,17 @@
       <div id="seccionVideo">
         <canvas id="lienzo"></canvas>
         <video id="video" autoplay controls></video>
+        <div class="barraRango">
+          <h1>Porcentaje de confianza:</h1>
+          <input type="range" min="0.1" max="1.0" step="0.1" value="0.5" class="slider" id="BarraDeRangos" />
+        </div>
+        <div id="listaCategorias"></div>
       </div>
-
-      <div id="listaCategorias"></div>
+      <canvas id="lienzo2"></canvas>
+      <div id="otraInfo">
+        <div id="tiemposAparicionCategorias"></div>
+        <div id="espacioAparicionCategorias"></div>
+      </div>
     </main>
   </body>
 </html>
