--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,14 @@
 
       <div id="seccionVideo">
         <canvas id="lienzo"></canvas>
-        <video id="video" autoplay controls></video>
+        <video id="video" autoplay controls>
+        </video>
+        <span id="iconoFullScreen"><img src="./img/pantalla_completa.svg" width="28px" height="28px"></span>
         <div class="confianza">
+          <div id="configuracionConfianza">
           <p>Confidence level: <span id="valorConfianza"></span></p>
           <input type="range" min="0.01" max="1.0" step="0.01" value="0.5" class="slider" id="barraDeRangos" />
+        </div>
           <p class="info">
             Setting a low confidence level makes the model detect more "objects" but makes more mistakes, while high
             confidence detects less "objects" but the model has more confidence it is detecting the correct object. The
