💄 Cambiar botón pantalla completa

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <canvas id="lienzo"></canvas>
         <video id="video" autoplay controls>
         </video>
-        <span id="iconoFullScreen"><img src="./img/pantalla_completa.svg" width="28px" height="28px"></span>
+        <button id="iconoFullScreen">Full screen</button>
         <div class="confianza">
           <div id="configuracionConfianza">
           <p>Confidence level: <span id="valorConfianza"></span></p>
