💄 Corregir margen info confianza

--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,12 @@
         <video id="video" autoplay controls>
         </video>
         <button id="iconoFullScreen">Full screen</button>
-        <div class="confianza">
-          <div id="configuracionConfianza">
+        <div id="configuracionConfianza">
           <p>Confidence level: <span id="valorConfianza"></span></p>
           <input type="range" min="0.01" max="1.0" step="0.01" value="0.5" class="slider" id="barraDeRangos" />
         </div>
-          <p class="info">
+        <div class="confianza" id="confianzaInfo"> 
+          <p class="info" >
             Setting a low confidence level makes the model detect more "objects" but makes more mistakes, while high
             confidence detects less "objects" but the model has more confidence it is detecting the correct object. The
             default is 50% - just in the middle of confidence and ability to detect.
